api-gateway-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api-gateway-deployment
spec:
  replicas: 2
  template:
    metadata:
      name: api-gateway
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: eu.gcr.io/cpy-docker-test/api-gateway
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health
            port: 8081
        ports:
        - containerPort: 8080
        - containerPort: 8081
