ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
spec:
  rules:
  - host: micro.cupenya.com
    http:
      paths: 
      - backend:
          serviceName: api-gateway-service
          servicePort: 80
