test-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: testgateway-ingress
spec: 
  backend:
    serviceName: api-gateway-service
    servicePort: 80
